--- a/notebooks/02-prepare-training-data.ipynb
+++ b/notebooks/02-prepare-training-data.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "markdown",
    "id": "0630c14d-89e6-4940-bb93-5924dbb395f9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Constants"
    ]
@@ -84,9 +82,7 @@
   {
    "cell_type": "markdown",
    "id": "157e7a6c-fcce-428b-89be-918e84a6032d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Preprocess"
    ]
@@ -347,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ce63ce90-5718-4560-8afc-fa8db0044781",
    "metadata": {},
    "outputs": [],
@@ -359,6 +355,39 @@
     "for i, ds in enumerate(['final_fc_state_our', 'final_fc_state_bandit']):\n",
     "    np.save(os.path.join(OUTPUT_DIR, f'train_{ds}.npy'), train_Y[i])\n",
     "    np.save(os.path.join(OUTPUT_DIR, f'test_{ds}.npy'), test_Y[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3e1e1762-09e0-48df-9657-05c3a1f28479",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['aircraft_id', 'record_id', 'timestep', 'health_level', 'brake_level',\n",
+       "       'flaps_level', 'transform_matrix_0', 'transform_matrix_1',\n",
+       "       'transform_matrix_2', 'transform_matrix_4', 'transform_matrix_5',\n",
+       "       'transform_matrix_6', 'altitude', 'transform_matrix_8',\n",
+       "       'transform_matrix_9', 'transform_matrix_10', 'velocity_x', 'velocity_y',\n",
+       "       'velocity_z', 'bandit_is_targetted', 'transform_matrix_0_bandit',\n",
+       "       'transform_matrix_1_bandit', 'transform_matrix_2_bandit',\n",
+       "       'transform_matrix_4_bandit', 'transform_matrix_5_bandit',\n",
+       "       'transform_matrix_6_bandit', 'altitude_bandit',\n",
+       "       'transform_matrix_8_bandit', 'transform_matrix_9_bandit',\n",
+       "       'transform_matrix_10_bandit', 'velocity_x_bandit', 'velocity_y_bandit',\n",
+       "       'velocity_z_bandit', 'horizontal_distance'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
    ]
   }
  ],
@@ -378,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
