--- a/notebooks/01-process-data.ipynb
+++ b/notebooks/01-process-data.ipynb
@@ -61,13 +61,16 @@
     "DB_DIR = os.path.join('..', 'data', 'external', 'database.db')\n",
     "SAVE_DIR = os.path.join('..', 'data', 'interim', 'version_01.csv')\n",
     "RECORD_ID = 3\n",
-    "COLUMN_NAMES = ['transform_matrix', 'velocity', 'health_level', 'wreck_flag', 'brake_level', 'flaps_level', 'landed_level', 'target_name']"
+    "COLUMN_NAMES = ['transform_matrix', 'velocity', 'health_level', 'wreck_flag', 'brake_level', 'flaps_level', 'landed_level', 'target_name']\n",
+    "FINAL_FEATURES = "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a1bd87cb-dbaf-4325-8ef9-ef0332ba7da5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Import Data"
    ]
@@ -96,9 +99,7 @@
   {
    "cell_type": "markdown",
    "id": "68834a9c-43f8-4ce2-abd9-67c6abb61380",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Split column [v]"
    ]
@@ -291,9 +292,7 @@
   {
    "cell_type": "markdown",
    "id": "28c4501c-dc75-495f-bf53-c477adc85088",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Concat aircraft data"
    ]
@@ -439,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
